--- a/src/layouts/base.astro
+++ b/src/layouts/base.astro
@@ -12,7 +12,7 @@ import '../styles/global.css';
     <body class="bg-background text-brand-white font-body-sans">
         <header class="fixed top-0 w-full z-50 bg-background/80 backdrop-blur border-b border-surface flex justify-between items-center font-heading-sans">
             <div class="flex items-center space-x-4 p-2 pl-6">
-                <img src="/astro-website/logo-white.svg" alt="UBCO Aerospace Logo" class="h-12">
+                <img src="/logo-white.svg" alt="UBCO Aerospace Logo" class="h-12">
                 <h1 class="text-2xl font-bold tracking-wide">{title}</h1>
             </div>
             <nav class="space-x-6 hidden md:flex p-6">
