--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import * as metadata from "./index.md";
 
     <!-- Hero -->
     <div slot="hero" class="relative h-screen flex items-center justify-center text-center overflow-hidden font-heading-sans">
-        <img src="/astro-website/hero.png" alt="Hero Image" class="absolute inset-0 w-full h-full object-cover opacity-40" />
+        <img src="/hero.png" alt="Hero Image" class="absolute inset-0 w-full h-full object-cover opacity-40" />
         <div class="relative z-10">
             <h2 class="text-6xl md:text-7xl font-extrabold mb-6 animate-fade-in">{metadata.frontmatter.tagline}</h2>
             <p class="text-2xl text-gray-200 mb-8 animate-fade-in delay-200">{metadata.frontmatter.tagline2}</p>
