attemp to fix blank page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Base from "../layouts/base.astro";
-import * as metadata from "./index.md";
+import * as metadata from "./metadata.md";
 ---
 <Base title={metadata.frontmatter.title}>
 
