fix button margins

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -66,7 +66,7 @@ import * as metadata from "./metadata.md";
     <section id="contact" class="py-24 animate-slide-up">
         <h3 class="text-4xl font-bold mb-6 font-heading-sans">Contact</h3>
         <a href={metadata.frontmatter.discord_link} class="px-8 py-4 bg-brand-red hover:bg-red-700 rounded-2xl font-semibold shadow-glow transition transform hover:scale-105">Join the Discord Server</a>
-        <p class="text-gray-300 text-lg">Reach us at <a href={"mailto:" + metadata.frontmatter.contact_email} class="text-brand-red hover:underline">{metadata.frontmatter.contact_email}</a></p>
+        <p class="text-gray-300 text-lg mt-7">Reach us at <a href={"mailto:" + metadata.frontmatter.contact_email} class="text-brand-red hover:underline">{metadata.frontmatter.contact_email}</a></p>
         <p class="text-gray-400 mt-3">Follow us on {metadata.frontmatter.social_media}.</p>
     </section>
 </Base>
