add google analytics

--- a/src/layouts/base.astro
+++ b/src/layouts/base.astro
@@ -5,10 +5,29 @@ import '../styles/global.css';
 <!DOCTYPE html>
 <html lang="en">
     <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{title}</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Orbitron:wght@500;700&display=swap" rel="stylesheet"></head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>{title}</title>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
+        
+        <!-- Google tag (gtag.js) -->
+        <script is:inline async src="https://www.googletagmanager.com/gtag/js?id=G-YZ4EVRE8CS"></script>
+        <script is:inline>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag("consent", "default", {
+                ad_storage: "denied",
+                ad_user_data: "denied",
+                ad_personalization: "denied",
+                analytics_storage: "denied",
+            });
+
+            gtag('config', 'G-YZ4EVRE8CS');
+        </script>
+
+    </head>
     <body class="bg-background text-brand-white font-body-sans"> 
         <header class="fixed top-0 w-full z-50 bg-background/80 backdrop-blur border-b border-surface flex justify-between items-center font-heading-sans">
             <a href="/" class="flex items-center space-x-4 p-2 pl-6">
